# ReportBuilder

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/Application/Config/: ConceptFootwear.cpp  ConceptTextile.cpp  DiscountFootwear.cpp  DiscountTextile.cpp  FootwearConfig.cpp  ReportDef.h  StoreConfig.h  TextileConfig.cpp
src/Application/Pipeline/: ReportPipeline.cpp  ReportPipeline.h
src/Application/PrintService/: PrintService.cpp  PrintService.h
src/Application/XlsxLoader/: XlsxLoader.cpp  XlsxLoader.h
src/Configurations/: MenuOptions.h  ReadFileConfiguration.h  ReportConfigurations.h  SizePriority.h  XlsxConfiguration.h
src/Domain/: Product.h  ProductSize.h
src/Domain/Builders/: Builders.cpp  Builders.h
src/Domain/SizeGrid/: SizeGrid.cpp  SizeGrid.h
src/Domain/Validation/: Validation.cpp  Validation.h
src/Infrastructure/: AppConfiguration.h  AppSettings.h
src/Infrastructure/DataHandler/: DataHandler.cpp  DataHandler.h
src/Infrastructure/PresetStorage/: PresetStorage.cpp  PresetStorage.h
src/Infrastructure/SizePriority/: SizePriority.cpp  SizePriority.h
src/Infrastructure/XlsxReader/: XlsxReader.cpp  XlsxReader.h
src/Infrastructure/XlsxWriter/: XlsxWriter.cpp  XlsxWriter.h
src/Product/: Product.h  ProductSize.h  TargetGroup.h
src/Product/DataHandler/: DataHandler.cpp  DataHandler.h
src/ReportBuilder/: ReportConfigurations.h  ReportPresets.h
src/ReportBuilder/Builder/: Builder.cpp  Builder.h
src/ReportBuilder/Priority/: Priority.cpp  Priority.h  SizePriority.h
src/ReportBuilder/ReportService/: ReportService.cpp  ReportService.h
src/ReportBuilder/Textile/: Builder.cpp  Builder.h
src/ReportBuilder/Validation/: Validation.cpp  Validation.h
src/UI/: Color.h  Key.h  UI.cpp  UI.h
src/UI/Dialogs/StoreTypeDialog/: StoreTypeDialog.cpp  StoreTypeDialog.h
src/UI/MainWindow/: MainWindow.cpp  MainWindow.h
src/UI/Theme/: Theme.cpp  Theme.h
src/UI/Widgets/ActionBar/: ActionBar.cpp  ActionBar.h
src/UI/Widgets/CategoryTabs/: CategoryTabs.cpp  CategoryTabs.h
src/UI/Widgets/PresetButton/: PresetButton.cpp  PresetButton.h  PresetSettingsDialog.cpp  PresetSettingsDialog.h
src/UI/Widgets/SheetView/: SheetTable.cpp  SheetTable.h  SheetView.cpp  SheetView.h
src/UI/Widgets/StatusBar/: StatusBar.cpp  StatusBar.h
src/XlsxHandler/: XlsxConfiguration.h  XlsxHandler.cpp  XlsxHandler.h
